// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatBlock - Snapshot Tests > renders multiple stat blocks together 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-4"
  >
    <div
      class="text-center"
    >
      <div
        class="font-bold text-3xl tracking-tight"
        style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
      >
        15
      </div>
      <div
        class="text-xs font-medium mt-1"
        style="color: var(--psp-gray-500);"
      >
        Wins
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="font-bold text-3xl tracking-tight"
        style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
      >
        2
      </div>
      <div
        class="text-xs font-medium mt-1"
        style="color: var(--psp-gray-500);"
      >
        Losses
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="font-bold text-3xl tracking-tight"
        style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
      >
        1
      </div>
      <div
        class="text-xs font-medium mt-1"
        style="color: var(--psp-gray-500);"
      >
        Ties
      </div>
    </div>
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with all options 1`] = `
<div
  class="text-center"
>
  <div
    class="text-4xl mb-2"
  >
    🏆
  </div>
  <div
    class="font-bold text-5xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    156
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Career Touchdowns
  </div>
  <div
    class="text-xs font-medium mt-0.5 text-green-600"
  >
    +
    25
    %
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with basic props 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    2,450
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Total Points
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with icon 1`] = `
<div
  class="text-center"
>
  <div
    class="text-2xl mb-1"
  >
    🏈
  </div>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    18
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Touchdowns
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with large number 1`] = `
<div
  class="text-center"
>
  <div
    class="text-2xl mb-1"
  >
    📊
  </div>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    250,000
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Total Yards
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with large size 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-5xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    12,450
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Career Yards
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with medium size 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    28
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Games Played
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with negative trend 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    8
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Turnovers
  </div>
  <div
    class="text-xs font-medium mt-0.5 text-red-600"
  >
    5
    %
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with positive trend 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    24.5
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Points Per Game
  </div>
  <div
    class="text-xs font-medium mt-0.5 text-green-600"
  >
    +
    12
    %
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with small size 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    12
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Wins
  </div>
</div>
`;

exports[`StatBlock - Snapshot Tests > renders stat block with string value 1`] = `
<div
  class="text-center"
>
  <div
    class="font-bold text-3xl tracking-tight"
    style="color: var(--psp-navy); font-family: "Bebas Neue", sans-serif;"
  >
    All-State
  </div>
  <div
    class="text-xs font-medium mt-1"
    style="color: var(--psp-gray-500);"
  >
    Status
  </div>
</div>
`;
